# su2-3nj-series-paper

./: .gitignore  Gemfile  LICENSE  README.md  VnV-TODO.ndson  index.md  pyproject.toml  su2-3nj-recurrences.code-workspace
.github/workflows/: pentagon-identity.yml
closedform/: A Closed-Form Hypergeometric Product Formula for General SU(2) 3nj Recoupling Coefficients.tex  _config.yml  index.html  index.md
data/: 3nj_recursion_test.csv  higher_n_reference_12j.json  higher_n_reference_9j.json  integration_validation_report.json  recurrence_stability_report.json
data/benchmarks/: performance_analysis.json
docs/: SU2-TODO-completed.md  SU2-TODO.md
docs/history/: SU2-history.md
generating-functional/: A Universal Generating Functional for SU(2) 3nj Symbols.tex  README.md
generating-functional/scripts/: test_3nj_recursion.py
lean/: lake-manifest.json  lakefile.lean
papers/: ARXIV_SUBMISSION_NOTES.md  su2-3nj-unified-representations-bib-annotations.md
papers/paper/: Makefile  (+9 more)
recurrences/: Closed-Form Finite Recurrences for SU(2) 3nj Symbols.tex  README.md  _config.yml  index.html
scripts/: benchmark_performance.py  generate_higher_n_references.py  generate_reference_tables.py  generate_stability_figures.py  generate_stability_report.py  generate_validation_tables.py  run_integration_tests.py  stability.m  verify_python.py  verify_wolfram.wls
tests/: test_coefficient_calculator.py  test_recurrence_engine.py  test_recursion_cross_verification.py  test_spin_validation.py  test_symmetry.py  test_wigner_6j_recurrence.py
uniform-closed-form/: UQ-TODO.ndjson
(+36 files in other folders)
