[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su2-3nj-recurrences"
version = "0.1.0"
description = "Closed-form finite recurrences for SU(2) 3nj symbols"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Arcticoder"}
]
license = {text = "Unlicense"}
dependencies = [
    "sympy>=1.12",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
